Add some meta property fields

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
   <title>🍉 - 1f349.net</title>
+  <meta name="author" content="🍉 - 1f349.net">
+  <meta property="og:title" content="🍉 - 1f349.net">
+  <meta property="og:url" content="https://1f349.net">
+  <meta property="og:site_name" content="🍉 - 1f349.net">
 </head>
 <body>
   <main>
