--- a/hosting.html
+++ b/hosting.html
@@ -13,8 +13,8 @@
     <ul>
       <li><a href="https://mrmelon54.com">MrMelon54</a></li>
       <li><a href="https://captainalm.com">Captain ALM</a></li>
+      <li><a href="https://kikicat123.ca" title="Won games in banana shooter">Kikicat</a></li>
       <li><a href="https://remove.directory">removeDirectory</a></li>
-      <li><a href="https://kikicat123.ca">Kikicat</a></li>
       <li><a href="https://discord-plays.xyz">Discord Plays</a></li>
       <li><a href="https://redstonecompendium.com">Redstone Compendium</a></li>
     </ul>
