Target blank, did you not print it?

--- a/hosting.html
+++ b/hosting.html
@@ -11,12 +11,12 @@
     <h1>🍉 - 1f349.net Hosting</h1>
     <p>We are currently hosting the following domains</p>
     <ul>
-      <li><a href="https://mrmelon54.com" title="🍉">MrMelon54</a></li>
-      <li><a href="https://captainalm.com" title="Mail API?">Captain ALM</a></li>
-      <li><a href="https://kikicat123.ca" title="Won games in banana shooter">Kikicat</a></li>
-      <li><a href="https://remove.directory" title="Lost games in banana shooter">removeDirectory</a></li>
-      <li><a href="https://discord-plays.xyz" title="Still dead, but alive">Discord Plays</a></li>
-      <li><a href="https://redstonecompendium.com" title="Always progressing">Redstone Compendium</a></li>
+      <li><a href="https://mrmelon54.com" target="_blank" title="🍉">MrMelon54</a></li>
+      <li><a href="https://captainalm.com" target="_blank" title="Mail API?">Captain ALM</a></li>
+      <li><a href="https://kikicat123.ca" target="_blank" title="Won games in banana shooter">Kikicat</a></li>
+      <li><a href="https://remove.directory" target="_blank" title="Lost games in banana shooter">removeDirectory</a></li>
+      <li><a href="https://discord-plays.xyz" target="_blank" title="Still dead, but alive">Discord Plays</a></li>
+      <li><a href="https://redstonecompendium.com" target="_blank" title="Always progressing">Redstone Compendium</a></li>
     </ul>
   </main>
 </body>
