Add favicon and nav links

--- a/hosting.html
+++ b/hosting.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
-  <title>Hosting | 🍉 - 1f349.net</title>
+  <title>Hosting | 1f349.net</title>
+  <meta name="author" content="🍉 - 1f349.net">
+  <meta property="og:title" content="🍉 - 1f349.net">
+  <meta property="og:url" content="https://1f349.net/hosting">
+  <meta property="og:type" content="object">
+  <meta property="og:image" content="https://1f349.net/1f349.svg">
+  <meta property="og:site_name" content="🍉 - 1f349.net">
 </head>
 <body>
   <main>
     <h1>🍉 - 1f349.net Hosting</h1>
+    <p>
+      <a href="/">Home</a>
+      &nbsp;-&nbsp;
+      <a href="/hosting">Hosting</a>
+      &nbsp;-&nbsp;
+      <a href="https://admin.1f349.net" target="_blank">Admin</a>
+    </p>
     <p>We are currently hosting the following domains</p>
     <ul>
       <li><a href="https://mrmelon54.com" target="_blank" title="🍉">MrMelon54</a></li>
