Add status page to navbar

--- a/+layout.html
+++ b/+layout.html
@@ -15,6 +15,8 @@
       <a href="/hosting">Hosting</a>
       &nbsp;-&nbsp;
       <a href="https://admin.1f349.net" target="_blank">Admin</a>
+      &nbsp;-&nbsp;
+      <a href="https://status.1f349.net" target="_blank">Status</a>
     </p>
   </header>
   {{page}}
