Update publish workflow

--- a/+layout.html
+++ b/+layout.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>🍉 - 1f349.net</h1>
+    <h1>🍉 - 1f349.com</h1>
     <p>
       <a href="/">Home</a>
       &nbsp;-&nbsp;
       <a href="/hosting">Hosting</a>
       &nbsp;-&nbsp;
-      <a href="https://admin.1f349.net" target="_blank">Admin</a>
+      <a href="https://admin.1f349.com" target="_blank">Admin</a>
       &nbsp;-&nbsp;
-      <a href="https://status.1f349.net" target="_blank">Status</a>
+      <a href="https://status.1f349.com" target="_blank">Status</a>
     </p>
   </header>
   {{page}}
